Modified some of the spacing, includes button fix

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
 	border-radius: 4rem;
 	color: #ffffff;
 	background-color: #FF102D;
+	cursor: pointer;
 }
 .header-image-box {
 	display: flex;
@@ -291,6 +292,7 @@ li {
 }
 /* -- Dropdown -- */
 .c-nav__dropdown{
+	cursor: pointer;
 	border: none;
 	width: 10rem;
 	font-size: 1.6rem;
@@ -329,6 +331,7 @@ option{
 		background-color: #1D3B53;
 		align-items: flex-start;
 		border-left: 1px solid #ffffff;
+		border-bottom: 1px solid #ffffff;
 		transform: translateX(120%);
 		transition: all 200ms ease-in-out;
 	}
@@ -345,16 +348,24 @@ option{
 		text-align: left;
 		padding-left: 2rem;		
 	}
+	.header{
+		width:100%;
+	}
+	.header-button{
+		margin: 0 auto;
+	}
 	.row{
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
-		width:114%;
+		width:100;
 	}
 	.section-head{
 		height: 70rem;
 	}
 	.button-border{
+		display: flex;
+		justify-content:left;
 		margin-top: 8rem;
 		margin-left: -20rem;
 	}
@@ -366,10 +377,6 @@ option{
 	.header-text{
 		padding: 0;
 		width: 100%;
-	}
-	.col-parent{
-		padding: 0;
-		margin: 0 auto;
 	}
 	.col-sm-5{
 		margin: 0 auto;
